# Petasos

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  petasos-project-spec-DRAFT-PARKED.md  petasos-spec.md  petasos-work-items.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  extras-llamafirewall.yml  extras-llm-guard.yml  extras-presidio.yml  release.yml
docs/: security-hardening-checklist.md
docs/briefs/: PET-1-brief.md  PET-11-hermes-integration-defaults.md  PET-111-equipped-toggle-observability.md  PET-3-llmguardscanner-brief.md  PET-4-llamafirewallscanner-brief.md  PET-5-presidioscanner-brief.md  PET-6-pipeline-orchestration-brief.md
docs/console/: petasos-console-api.yaml  petasos-console-frontend-handoff.md
docs/deployment/: banking-egress.md  gavin-banking-egress.md  hardening.md  hermes-desktop.md  profile-resolution-model.md
docs/deployment/reference-plugin/: __init__.py  verify.py
docs/deployment/reference_plugin/: __init__.py  plugin.yaml  verify.py
docs/platform/: hermes-desktop-footguns.md
docs/specs/TODO/: PET-1.spec.md  PET-10.test-output.txt  PET-100.test-output.txt  PET-101.test-output.txt  PET-102.test-output.txt  PET-103.test-output.txt  PET-104.test-output.txt  PET-105.test-output.txt  (+78 more)
docs/usage/: configuration.md  hermes-agent-profiles.md  scanners.md
petasos/: __init__.py  _types.py  config.py  normalize.py  pipeline.py  profile_lint.py
petasos/console/: __init__.py  __main__.py  _armed.py  _config_meta.py  _events.py  _history.py  _paths.py  _presets.py  _reload.py  _ring_buffer.py  _sse.py  _standalone.py  _validation.py  server.py
petasos/premium/: __init__.py  alerting.py  audit.py  escalation.py  formatting.py  frequency.py  guard.py  license.py
petasos/scanners/: __init__.py  llama_firewall.py  llm_guard.py  minimal.py  presidio.py
petasos/session/: __init__.py  _safe_json.py  alerting.py  audit.py  escalation.py  formatting.py  frequency.py  guard.py  license.py  lineage.py  taint.py
scripts/: pet135_replay.py
tests/: conftest.py  test_alerting.py  test_async_marker_invariants.py  test_audit.py  test_audit_finding_sink.py  test_benchmarks.py  test_ci_extras_lanes.py  test_config.py  test_config_meta.py  test_console_armed.py  test_console_auth.py  test_console_handlers.py  test_console_hermes_profile.py  test_console_integrity_health.py  test_console_integrity_preflight.py  test_console_packaging_durability.py  test_console_playground.py  test_console_reload.py  test_console_scan_detail.py  test_console_scan_history.py  test_console_scans_total.py  test_console_server.py  test_console_standalone_entrypoint.py  test_console_validation.py  test_disarm_bypass_counter.py  test_docs_usage_consistency.py  test_enforcement_events.py  test_enforcement_integrity.py  test_escalation.py  test_finding_merge.py  test_formatting.py  test_frequency.py  test_frequency_tombstone.py  test_guard.py  test_guard_reconfigure.py  test_hardening.py  test_hardening_docs.py  test_hermes_integration_defaults.py  test_hermes_smoke.py  test_integration_e2e.py  (+40 more)
tests/adversarial/: README.md  conftest.py
tests/fixtures/: pet135_codegen_corpus.json  test_private.pem
tests/js/: armed-sync.test.mjs  config-sections.test.mjs  console-token.test.mjs  disarm-bypass-counter.test.mjs  enforcement-history.test.mjs  enforcement-provenance.test.mjs  hermes-diegetic-profile.test.mjs  hermes-profile-selector.test.mjs  integrity-health.test.mjs  playground.test.mjs  preset-dial.test.mjs  profile-picker.test.mjs  richtext.test.mjs  scan-history-count.test.mjs  scan-history-paging.test.mjs  scanner-health.test.mjs  skeleton.test.mjs  sse-reconnect.test.mjs  trap-burst.test.mjs
(+493 files in other folders)
