[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petasos"
version = "0.1.0"
requires-python = ">=3.11"
license = "MIT"
description = "Pluggable, session-aware content security pipeline for Python AI agents"
readme = "README.md"
dependencies = ["pyjwt[crypto]>=2.8,<3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/Vigil-Harbor/Petasos"
Changelog = "https://github.com/Vigil-Harbor/Petasos/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Vigil-Harbor/Petasos/issues"

[project.optional-dependencies]
llm-guard = ["llm-guard>=0.3.16,<0.4"]
llamafirewall = ["llamafirewall"]
presidio = [
    "presidio-analyzer>=2.2,<3.0",
    "presidio-anonymizer>=2.2,<3.0",
]
console = ["fastapi>=0.110,<1", "uvicorn[standard]>=0.29,<1"]
all = ["petasos[llm-guard,llamafirewall,presidio,console]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=5.0,<6",
    "pytest-cov>=5.0",
    "anyio[trio]>=4.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
    "presidio_analyzer",
    "presidio_analyzer.*",
    "presidio_anonymizer",
    "presidio_anonymizer.*",
    "spacy",
    "spacy.*",
    "jwt",
    "jwt.*",
    "llm_guard",
    "llm_guard.*",
    "llamafirewall",
    "llamafirewall.*",
    "transformers",
    "transformers.*",
    "pytest_benchmark",
    "pytest_benchmark.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "petasos.scanners.presidio"
warn_unused_ignores = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = [
    "petasos.console.*",
    "fastapi",
    "fastapi.*",
    "uvicorn",
    "uvicorn.*",
]
ignore_missing_imports = true
disallow_untyped_decorators = false
